--- a/app/assets/stylesheets/config/_responsiveness.scss
+++ b/app/assets/stylesheets/config/_responsiveness.scss
@@ -29,4 +29,22 @@ html {
       padding-right: 0;
     }
   }
+
+  @media (max-width: 450px) {
+    .card-row {
+      padding: 0;
+    }
+
+    .size-circle {
+      margin: 0 5px;
+    }
+
+    .no-padding {
+      padding: 0;
+    }
+    .row {
+      margin: 0;
+    }
+  }
+
 }
