--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -44,8 +44,8 @@
 .card-picture {
   margin-bottom: 45px;
   img {
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 80%;
   }
 }
 
@@ -103,3 +103,6 @@
   // overflow-y: auto;
 }
 
+.no-padding {
+
+}
