--- a/app/views/pages/package_main.js.erb
+++ b/app/views/pages/package_main.js.erb
@@ -11,9 +11,11 @@ var added = "<%= @category %>"
 <% if @ready_to_order_package %>
   $(".place-package-order").attr("href", "/orderitems");
   $(".place-package-order").text("Proceed to Checkout");
+  $(".place-package-order").removeClass("cannot-place-order");
 <% else %>
   $(".place-package-order").attr("href", "#");
   $(".place-package-order").text("Please Confirm All Items");
+  $(".place-package-order").addClass("cannot-place-order");
 <% end %>
 $(".card-row").empty();
 var container = "<%= j render 'pages/package_page', categories: @categories, items: @items %>";
