fixed slider and adjusted banner header size

--- a/app/assets/stylesheets/config/_responsiveness.scss
+++ b/app/assets/stylesheets/config/_responsiveness.scss
@@ -47,4 +47,11 @@ html {
     }
   }
 
+  @media (min-width: 450px) {
+    .home-banner {
+      h1 {
+        font-size: 7vw;
+      }
+    }
+  }
 }
