--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,7 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0;
 }
+
+body{
+font-family: $base-font, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
