--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -30,9 +30,6 @@
 }
 
 .package-item {
-  div {
-    height: 70px;
-  }
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -49,13 +46,13 @@
 }
 
 .package-item-middle {
-  display: flex;
-  height: 100%;
-  justify-content: space-between;
-  flex-direction: column;
-  margin-right: 5px;
+  // display: flex;
+  // height: 100%;
+  // justify-content: space-between;
+  // flex-direction: column;
+  margin-right: 10px;
   p {
-    margin: 0;
+     margin: 0;
   }
 }
 
@@ -64,13 +61,13 @@
 }
 
 .package-item-right {
-  width: 35%;
-  min-width: 50px;
-  display: flex;
-  height: 100%;
-  align-items: flex-end;
-  justify-content: space-between;
-  flex-direction: column;
+  // width: 35%;
+  // min-width: 50px;
+  // display: flex;
+  // height: 100%;
+  // align-items: flex-end;
+  // justify-content: space-between;
+  // flex-direction: column;
   p {
     margin: 0;
   }
