--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -5,8 +5,13 @@
 // @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
 @import url('https://fonts.googleapis.com/css?family=Graduate');
-$our-font: "Quicksand", "sans-serif";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+
+$open-font: "Quicksand", "sans-serif";
 $logo-font: 'Graduate', "cursive";
+
+$base-font:'Open Sans', sans-serif;
+
 // $base-font: "Open Sans", "Helvetica", "sans-serif";
 // $header-font: "Raleway", "Helvetica", "sans-serif";
 
