--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,7 @@ input[type=number]::-webkit-outer-spin-button {
 body{
 font-family: $base-font, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+abbr {
+  display: none;
+}
