--- a/app/views/items/package_show.js.erb
+++ b/app/views/items/package_show.js.erb
@@ -1,3 +1,13 @@
+<% if @swap %>
+  var categoryOfReplacement = "<%= @category %>";
+  var pictureURL = "<%= @item.picture %>";
+  var itemName = "<%= @item.brand %>";
+  var itemPrice = "<%= humanized_money_with_symbol @item.price %>";
+  $("#sidebar-" + category + " > .package-item-picture > img").attr("src", pictureURL);
+  $("#sidebar-" + category + " > .package-item-middle > .package-item-brand").text(itemName);
+  $("#sidebar-" + category + " > .package-item-right > p").text(itemPrice);
+
+<% end %>
 <% if @criteria_for_elimination %>
   var category = "<%= @criteria_for_elimination %>";
   $("#sidebar-" + category).css({"display" : "none"});
