did most of what was recomended we do. All that's left is the signin/signup button on the cart page.

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -44,7 +44,9 @@
 .card-picture {
   margin-bottom: 45px;
   img {
+    max-width: 270px;
     width: 80%;
+    max-height: 270px;
     height: 80%;
   }
 }
