--- a/app/views/items/_package_index_item_form.html.erb
+++ b/app/views/items/_package_index_item_form.html.erb
@@ -4,10 +4,10 @@
       <strong id="index-min">$10</strong><input id="ex2" type="text" class="span2" name="min_max" value="" data-slider-min="10" data-slider-max="1000" data-slider-step="5" data-slider-value="[<%= @min_price %>,<%= @max_price %>]"/><strong id="index-max">$1000</strong>
       <%= hidden_field_tag "category", category %>
       <%= hidden_field_tag "filter", "true" %>
-      <%= submit_tag "Filter", class: "package-index-form-filter-button" %>
+      <%= submit_tag "Filter", class: "clear-btn margin-left" %>
     <% end %>
     <%= link_to package_item_path(item: @item, items: @item_ids), method: :post, remote: true do %>
-      <div class="package-index-item-back-button">
+      <div class="clear-btn">
         Back
       </div>
     <% end %>
