--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -17,6 +17,7 @@
     font-weight: bold;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
     margin: 0;
+    margin-bottom: 40px;
   }
   margin-bottom: 30px;
 }
