--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="max-height: calc(100vh - 70px);">
   <% @items.sort { |i, j| i.category_id <=> j.category_id }.each_with_index do |item, i| %>
     <div class="col-xs-12 col-sm-6 col-md-4 no-padding">
       <%= link_to package_item_path(item: item.id, items: @items.map { |i| i.id }), method: :post, remote: true do %>
