--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -47,6 +47,7 @@
   </div>
   <div>
     <% if current_user %>
+      <h3 id="sidebar-total">Total: <%= humanized_money_with_symbol current_user.orders.last.amount %></h3>
       <% order_items = current_user.orders.last.order_items.where(package: true) %>
       <% if order_items.all? { |i| i.cart } %>
         <%= link_to "Proceed to Checkout", orderitems_path, class: "btn cart-button place-package-order" %>
@@ -54,7 +55,9 @@
         <%= link_to "Please Confirm All Items", "#", class: "btn cart-button place-package-order cannot-place-order" %>
       <% end %>
     <% else %>
-
+      <% sidebar_total = 0 %>
+      <% session[:package_items].each { |i| sidebar_total += Item.find(i["item_id"]).price if i["cart"] } %>
+      <h3 id="sidebar-total">Total: <%= humanized_money_with_symbol sidebar_total %></h3>
       <% if session[:package_items].all? { |i| i["cart"] } %>
         <%= link_to "Proceed to Checkout", orderitems_path, class: "btn cart-button place-package-order" %>
 
