--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   font-family: $base-font;
   position: fixed;
@@ -14,10 +15,6 @@
   min-height: 66px;
 
   .cart-button {
-    position: absolute;
-    bottom: 45px;
-    left: 50%;
-    transform: translateX(-50%);
   }
 }
 
@@ -29,7 +26,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 20px 20px;
+  padding: calc(1vh - 1px) 20px;
   border-bottom: solid 1px rgba(151,151,151,0.1);
 }
 
@@ -47,6 +44,7 @@
   // justify-content: space-between;
   // flex-direction: column;
   margin-right: 10px;
+  width: 40% !important;
   p {
      margin: 0;
   }
@@ -64,6 +62,7 @@
   // align-items: flex-end;
   // justify-content: space-between;
   // flex-direction: column;
+  width: 25% !important;
   p {
     margin: 0;
   }
@@ -128,10 +127,15 @@
 
 #sidebar-total {
   font-weight: bold;
+  margin-bottom: 16px;
 }
 
 .non-sidebar {
   font-size: 20px;
   margin-top: 30px;
   padding: 4px 12px;
+}
+
+.sidebar-bottom {
+  padding-bottom: 30px;
 }
