--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -16,7 +16,7 @@
 
 .main-photo {
   padding: 10px;
-  width: 100%;
+  max-height: 400px;
   margin-top: 40px;
   // height: 80%;
   // background-size: cover!important;
