--- a/app/views/items/_package_show.html.erb
+++ b/app/views/items/_package_show.html.erb
@@ -1,6 +1,6 @@
 <div class="package-item-show-container">
-  <div class="row" style="flex: 1 0;">
-    <div class="col-xs-12 col-sm-5">
+  <div class="row">
+    <div class="col-xs-12 col-sm-5 text-center">
       <%= image_tag @item.picture, class:"main-photo" %>
     </div>
     <div class="col-xs-12 col-sm-7 package-item-right-div">
