--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 body{
-font-family: $base-font, "Helvetica Neue", Helvetica, Arial, sans-serif;
+font-family: $open-font, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 abbr {
