--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,9 +13,7 @@
 }
 .home-banner {
   h1 {
-    font-size: 10vmin;
-    font-weight: bold;
-    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+    font-size: 15px;
     margin: 0;
     margin-bottom: 40px;
   }
