--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -46,8 +46,8 @@
   margin-bottom: 45px;
   text-align: center;
   img {
-    height: 25vh;
-    width: 25vh;
+    height: 25vmin;
+    width: 25vmin;
   }
 }
 
