--- a/app/assets/stylesheets/config/_responsiveness.scss
+++ b/app/assets/stylesheets/config/_responsiveness.scss
@@ -43,11 +43,11 @@ html {
   }
 
   @media (min-width: 450px) {
-    .home-banner {
-      h1 {
-        font-size: 4vw;
-      }
-    }
+    // .home-banner {
+    //   h1 {
+    //     font-size: 4vw;
+    //   }
+    // }
   }
 }
 .no-padding{
