--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
   <div class="row card-row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+    <div class="sing-up-card">
       <!-- <div class="fonty"> -->
-        <h2>Sign up</h2>
+      <h2>Sign up</h2>
       <!-- </div> -->
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
@@ -19,6 +20,7 @@
       <% end %>
 
       <%= render "devise/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
