--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -13,9 +13,6 @@
   z-index: 100;
   border-left: solid 1px #E5E5E5;
   min-height: 66px;
-
-  .cart-button {
-  }
 }
 
 .package-items {
@@ -39,10 +36,6 @@
 }
 
 .package-item-middle {
-  // display: flex;
-  // height: 100%;
-  // justify-content: space-between;
-  // flex-direction: column;
   margin-right: 10px;
   width: 40% !important;
   p {
@@ -55,13 +48,6 @@
 }
 
 .package-item-right {
-  // width: 35%;
-  // min-width: 50px;
-  // display: flex;
-  // height: 100%;
-  // align-items: flex-end;
-  // justify-content: space-between;
-  // flex-direction: column;
   width: 25% !important;
   p {
     margin: 0;
@@ -94,26 +80,27 @@
   border-bottom: #F8F9F9;
 
 }
-
+// When
 .place-package-order {
   color: white !important;
+  margin-bottom: 0px;
   a {
     color: white !important;
     &:hover {
       text-decoration: none;
     }
   }
-  margin-bottom: 0px;
-
 }
 .not-booked{
   opacity: 0.3;
 }
-
+// Adding this class when you place an order.
+// And removing it when you remove an order.
 .cannot-place-order {
   background-color: lightgrey !important;
   color: black !important;
   cursor: default !important;
+  margin-bottom: 0px;
   a {
     cursor: default !important;
     color: black !important;
@@ -122,7 +109,6 @@
       text-decoration: none;
     }
   }
-  margin-bottom: 0px;
 }
 
 #sidebar-total {
