IDK what i did there

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,7 @@
         <div class="row">
           <div class="col-xs-12">
               <h1>The World's #1 Ref Store</h1>
+              <h1><%= t.hello %></h1>
           </div>
           <div class="col-xs-12">
             <%= simple_form_for :search,  url: package_path , :method => :get, html: {class: 'form-inline'} do |f| %>
