--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -4,6 +4,6 @@ Today we'll talk about SMTP and Postmark!
 
 See ya! -->
 
-
+<%= @user.email  %>
 <h1>Arbitres de hockey - </h1>
 <p>On vous rend la vie facile!</p>
