--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
   <%= favicon_link_tag %>
 </head>
 <body>
-  <%= render 'shared/navbar' %>
+  <%#= render 'shared/navbar' %>
   <%= render 'shared/flashes' %>
   <%= yield %>
   <%#= render 'shared/footer' %>
