--- a/app/assets/stylesheets/config/_responsiveness.scss
+++ b/app/assets/stylesheets/config/_responsiveness.scss
@@ -37,9 +37,9 @@ html {
     .no-padding {
       padding: 0;
     }
-    .row {
-      margin: 0;
-    }
+    // .row {
+    //   margin: 0;
+    // }
   }
 
   @media (min-width: 450px) {
