New user created on the home page with a default password called password and a password confirmation called password. So we dont need to have password input in our home#page form.

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -20,6 +20,11 @@
   h1{
     font-size: 25px;
   }
+  img{
+    width: 220px;
+    height: 120px;
+    margin-top: -20px;
+  }
 }
 
 .nav-bg-white{
