--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,3 +19,4 @@
     </div>
   </div>
 </div>
+<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:"btn base-button" %>
