--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,9 @@
 <div class="navbar-wagon <%= controller_name == "pages" && action_name == "home" ? "nav-bg-transparent nav-btn-white" : "nav-bg-white nav-btn-grey" %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-  <!-- <div class="logo"> -->
   <div class="nav-logo">
-    <h1>Zebrasclub</h1>
+  <%= image_tag "logo_complet_final_petite.png" %>
   </div>
-
-  <%#= image_tag "logo_complet_2.png" %>
-  <%#= image_tag "logo_zebrasclub_2.svg" %>
-
-  <%#= image_tag "https://unsplash.it/50" %>
-  <!-- </div> -->
   <% end %>
 
   <!-- Right Navigation -->
@@ -65,5 +58,4 @@
   </div>
 </div>
 </div>
-<!-- Dropdown list appearing on mobile only -->
 
