--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,10 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
+            <%# if user_signed_in? %>
+           <!--  <h1>Welcome to <%#= @home_page_user.first_name %> </h1> -->
+            <%# end %>
+
             <h1>The World's #1 Ref Store</h1>
             <!-- <h1><%#= t.hello %></h1> -->
           </div>
@@ -22,9 +26,10 @@
 
   <%= simple_form_for @home_page_user, url: new_user_path(@home_page_user), :method => :post do |f| %>
   <%= f.input :email, required: true, autofocus: true, label: false %>
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:"btn base-button" %>
   <%= f.button :submit, "Enter" %>
   <% end %>
- <!-- Begin MailChimp Signup Form -->
+  <!-- Begin MailChimp Signup Form -->
 <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
   #mc_embed_signup{clear:left;
@@ -47,25 +52,25 @@
   }
   /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
      We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style> -->
-<!-- <div id="mc_embed_signup"> -->
-<!-- <form action="//zebrasclub.us15.list-manage.com/subscribe/post?u=c3f0bd81a6fc7bc5b51b4a1f7&amp;id=<%= ENV['MAILCHIMP_LIST_ID'] %>" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> -->
-<!-- <form action="/" method="post" class="validate" target="_blank" novalidate style=""> -->
-    <!-- <div id="mc_embed_signup_scroll"> -->
-  <!-- <h2>Entre ton fuckin email yo!</h2> -->
-<!-- <div class="mc-field-group"> -->
-  <!-- <label for="mce-EMAIL">Email Address </label> -->
-  <!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="example@gmail.com"> -->
-<!-- </div> -->
-  <!-- <div id="mce-responses" class="clear"> -->
-    <!-- <div class="response" id="mce-error-response" style="display:none"></div> -->
-    <!-- <div class="response" id="mce-success-response" style="display:none"></div> -->
-  <!-- </div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
-    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c3f0bd81a6fc7bc5b51b4a1f7_77537efd5a" tabindex="-1" value=""></div> -->
-    <!-- <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div> -->
-    <!-- </div> -->
-    <!-- </form> -->
-<!-- </form> -->
-<!-- </div> -->
+   </style> -->
+   <!-- <div id="mc_embed_signup"> -->
+   <!-- <form action="//zebrasclub.us15.list-manage.com/subscribe/post?u=c3f0bd81a6fc7bc5b51b4a1f7&amp;id=<%= ENV['MAILCHIMP_LIST_ID'] %>" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> -->
+   <!-- <form action="/" method="post" class="validate" target="_blank" novalidate style=""> -->
+   <!-- <div id="mc_embed_signup_scroll"> -->
+   <!-- <h2>Entre ton fuckin email yo!</h2> -->
+   <!-- <div class="mc-field-group"> -->
+   <!-- <label for="mce-EMAIL">Email Address </label> -->
+   <!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="example@gmail.com"> -->
+   <!-- </div> -->
+   <!-- <div id="mce-responses" class="clear"> -->
+   <!-- <div class="response" id="mce-error-response" style="display:none"></div> -->
+   <!-- <div class="response" id="mce-success-response" style="display:none"></div> -->
+   <!-- </div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+   <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c3f0bd81a6fc7bc5b51b4a1f7_77537efd5a" tabindex="-1" value=""></div> -->
+   <!-- <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div> -->
+   <!-- </div> -->
+   <!-- </form> -->
+   <!-- </form> -->
+   <!-- </div> -->
 
-<!--End mc_embed_signup-->
+   <!--End mc_embed_signup-->
