--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -1,13 +1,17 @@
 
   <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-header">
-        <div class="navbar-header">
-          <p class="nav-a-droite"><small><em>Bientôt en ligne</em></small></p>
-          <a class="navbar-brand" href="#">Zebrasclub.com
-            <!-- <img alt="Brand" src="..."> *** pour le logo ***-->
-          </a>
+      <div class="navbar-header">
 
-    </div>
+        <a class="navbar-brand" href="#">Zebrasclub.com
+          <!-- <img alt="Brand" src="..."> *** pour le logo ***-->
+        </a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><p><small><em>Bientôt en ligne</em></small></p></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
@@ -23,7 +27,7 @@
       </div>
         <div class="col-sm-5">
           <div class="devise-container">
-          <%= image_tag "devise_zebrasclub_page_lancement.png", class:"img-fluid img-responsive center-block" %>
+          <%#= image_tag "devise_zebrasclub_page_lancement.png", class:"img-fluid img-responsive center-block" %>
         </div>
       </div>
     </div>
@@ -39,7 +43,7 @@
         <p class="lead">Nous allons offrir les meilleurs prix sur le marché.</p>
       </div>
       <div class="col-xs-4">
-        <%= image_tag "bas_prix_icon.png", class:"img-fluid img-responsive center-block" %>
+        <%#= image_tag "bas_prix_icon.png", class:"img-fluid img-responsive center-block" %>
       </div>
     </div>
   </div>
@@ -53,7 +57,7 @@
       </div>
 
       <div class="col-xs-4 col-xs-pull-8">
-       <%= image_tag "Tout_même_toit_bleu.png", class:"img-fluid img-responsive center-block" %>
+       <%#= image_tag "Tout_même_toit_bleu.png", class:"img-fluid img-responsive center-block" %>
      </div>
    </div>
  </div>
@@ -68,7 +72,7 @@
 
     <div class="col-xs-4">
       <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
-      <%= image_tag "Achat_en_kit.png", class:"img-fluid img-responsive center-block" %>
+      <%#= image_tag "Achat_en_kit.png", class:"img-fluid img-responsive center-block" %>
     </div>
   </div>
 </div>
