--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -7,12 +7,6 @@
 //   height: 100%;
 // }
 
-@media (min-width: 768px){
-  header {
-      min-height: 100%;
-  }
-}
-
 header {
     position: relative;
     width: 100%;
@@ -24,27 +18,37 @@ header {
     color: #fff;
 }
 
-.navbar {
+@media (min-width: 768px){
+  header {
+      min-height: 100%;
+  }
+}
+.navbar-default {
   position: absolute;
   background-color: transparent;
-  border-bottom: none;
+  border-color: transparent;
 }
 
-.nav-a-droite {
-    position: relative;
-    float: right;
-    padding: 9px 10px;
-    margin-top: 8px;
-    margin-right: 15px;
-    margin-bottom: 8px;
-    color: #fff;
-}
+// .nav-a-droite {
+//     position: relative;
+//     float: right;
+//     padding: 9px 10px;
+//     margin-top: 8px;
+//     margin-right: 15px;
+//     margin-bottom: 8px;
+//     color: #fff;
+// }
 
 .container-header {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container-header > .navbar-header {
+    margin-right: -15px;
+    margin-left: -15px;
 }
 @media (min-width: 768px) {
     .container-header {
@@ -68,15 +72,11 @@ header {
 
 
 
-.container-header > .navbar-header {
-    margin-right: -15px;
-    margin-left: -15px;
-}
 
-.jumbotron {
-  background-color: transparent;
+// .jumbotron {
+//   background-color: transparent;
 
-}
+// }
 .jumbotron .btn {
   padding: 14px 24px;
   font-size: 21px;
