--- a/app/assets/stylesheets/config/_responsiveness.scss
+++ b/app/assets/stylesheets/config/_responsiveness.scss
@@ -42,14 +42,14 @@ html {
     // }
   }
 
-  @media (min-width: 450px) {
-    // .home-banner {
-    //   h1 {
-    //     font-size: 4vw;
-    //   }
-    // }
-  }
-}
+//   @media (min-width: 450px) {
+//     .home-banner {
+//       h1 {
+//         font-size: 4vw;
+//       }
+//     }
+//   }
+// }
 .no-padding{
   padding: 0 3px !important;
 }
