--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 body{
+width: 100%;
+height: 100%;
 font-family: $base-font, "Helvetica Neue", Helvetica, Arial, sans-serif;
 font-weight: lighter;
 }
