--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -1,17 +1,13 @@
-// header {
-//   background-color: #5098e8;
-//   position: relative;
-//   top: 0;
-//   bottom: 0;
-//   width: 100%;
-//   height: 100%;
-// }
+html, body {
+  width: 100%;
+  height: 100%;
+}
 
 header {
     position: relative;
     width: 100%;
     min-height: auto;
-    overflow-y: hidden;
+    overflow: hidden;
     background: #577BFF;
     background: -webkit-linear-gradient(to left,#577BFF,#50e8e8);
     background: linear-gradient(to left,#577BFF,#50e8e8);
@@ -23,21 +19,52 @@ header {
       min-height: 100%;
   }
 }
-.navbar-default {
-  position: absolute;
-  background-color: transparent;
-  border-color: transparent;
+
+@media (min-width: 992px){
+  header {
+      min-height: 100%;
+  }
 }
 
-// .nav-a-droite {
-//     position: relative;
-//     float: right;
-//     padding: 9px 10px;
-//     margin-top: 8px;
-//     margin-right: 15px;
-//     margin-bottom: 8px;
-//     color: #fff;
-// }
+@media (min-width: 1200px){
+  header {
+      min-height: 100%;
+  }
+}
+
+
+.navbar-brand {
+   padding: 4px 4px;
+ }
+
+@media (min-width: 992px){
+  .navbar-brand {
+      padding: 0px;
+  }
+}
+
+@media (min-width: 1200px){
+  .navbar-brand {
+      padding: 0px;
+  }
+}
+
+.navbar-brand img {
+  height: 100%;
+}
+
+.navbar-landing {
+  background: transparent;
+  z-index: 999;
+  position: absolute;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+    .navbar-landing {
+      padding-top: 10px;
+  }
+}
 
 .container-header {
   padding-right: 15px;
@@ -91,12 +118,59 @@ header .header-content {
 @media (min-width: 768px) {
   header .header-content {
       text-align: left;
+      height: 100vh;
   }
 }
 
-.devise-container {
+@media (min-width: 768px) {
+    header .header-content .header-content-inner {
+      max-width: none;
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+  }
+}
+
+
+
+
+header .device-container {
     max-width: 300px;
     margin: 0 auto 80px;
+    position: relative;
+}
+
+@media (min-width: 768px) {
+  header .device-container {
+  height: 100vh;
+  margin: auto;
+  position: relative;
+  max-width: none;
+  // margin: 0;
+  //     // // max-height: calc(0vh);
+  //     // // margin: 100px auto 0;
+  //     // // position: absolute;
+  //   top: 50%;
+      // // transform: translateY(-50%);
+      // max-width: none;
+      // margin: 0;
+      // position: absolute;
+      // top: 50%;
+      // transform: translateY(-50%);
+
+  }
+}
+
+@media (min-width: 768px) {
+  header .device-container-inner {
+      max-width: none;
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+
+  }
 }
 .content-section-a {
   padding: 1px 0;
