--- a/app/assets/stylesheets/config/_responsiveness.scss
+++ b/app/assets/stylesheets/config/_responsiveness.scss
@@ -41,15 +41,8 @@ html {
     //   margin: 0;
     // }
   }
+}
 
-//   @media (min-width: 450px) {
-//     .home-banner {
-//       h1 {
-//         font-size: 4vw;
-//       }
-//     }
-//   }
-// }
 .no-padding{
   padding: 0 3px !important;
 }
