--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -1,33 +1,37 @@
 
-  <nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-landing">
   <div class="container-header">
-      <div class="navbar-header">
-
-        <a class="navbar-brand" href="#">Zebrasclub.com
-          <!-- <img alt="Brand" src="..."> *** pour le logo ***-->
-        </a>
-      </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><p><small><em>Bientôt en ligne</em></small></p></li>
-        </ul>
-      </div>
+    <div class="navbar-header">
+      <!-- <a class="navbar-brand" href="#" style="padding:0px;">
+        <img src="logo_complet_final.png" style="height:100%;">
+      </a> -->
+      <%= image_tag "logo_complet_final_ajusté_blanc.png", class:"navbar-brand" %>
     </div>
-  </nav>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><p><small><em>Bientôt en ligne</em></small></p></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <header>
   <div class="container-header">
     <div class="row">
-      <div class="col-sm-7">
+      <div class="col-sm-6">
         <div class="header-content">
-          <h1>On veut vous faciliter la vie!</h1>
-          <p class="lead">Une boutique en ligne pour l'équipement d'arbitre de hockey.</p>
-          <p><a class="btn btn-lg btn-success" href="#" role="button">Dit-moi quand ça sort</a></p>
+          <div class="header-content-inner">
+            <h1>On veut vous faciliter la vie!</h1>
+            <p class="lead">Une boutique en ligne pour l'équipement d'arbitre de hockey.</p>
+            <p><a class="btn btn-lg btn-success" href="#" role="button">Dit-moi quand ça sort</a></p>
+          </div>
         </div>
       </div>
-        <div class="col-sm-5">
-          <div class="devise-container">
-          <%#= image_tag "devise_zebrasclub_page_lancement.png", class:"img-fluid img-responsive center-block" %>
+        <div class="col-sm-6">
+          <div class="device-container">
+            <div class="device-container-inner">
+              <%= image_tag "device_zebrasclub_page_lancement.png", class:"img-responsive center-block" %>
+            </div>
         </div>
       </div>
     </div>
@@ -43,7 +47,7 @@
         <p class="lead">Nous allons offrir les meilleurs prix sur le marché.</p>
       </div>
       <div class="col-xs-4">
-        <%#= image_tag "bas_prix_icon.png", class:"img-fluid img-responsive center-block" %>
+        <%= image_tag "bas_prix_icon.png", class:"img-fluid img-responsive center-block" %>
       </div>
     </div>
   </div>
@@ -57,7 +61,7 @@
       </div>
 
       <div class="col-xs-4 col-xs-pull-8">
-       <%#= image_tag "Tout_même_toit_bleu.png", class:"img-fluid img-responsive center-block" %>
+       <%= image_tag "Tout_même_toit_bleu.png", class:"img-fluid img-responsive center-block" %>
      </div>
    </div>
  </div>
@@ -72,7 +76,7 @@
 
     <div class="col-xs-4">
       <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
-      <%#= image_tag "Achat_en_kit.png", class:"img-fluid img-responsive center-block" %>
+      <%= image_tag "Achat_en_kit.png", class:"img-fluid img-responsive center-block" %>
     </div>
   </div>
 </div>
