--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -6,9 +6,7 @@
         <img src="logo_complet_final.png" style="height:100%;">
       </a> -->
       <%= image_tag "logo_complet_final_ajusté_blanc.png", class:"navbar-brand" %>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav pull-right">
         <li><p><small><em>Bientôt en ligne</em></small></p></li>
       </ul>
     </div>
@@ -46,8 +44,8 @@
         <h2 class="featurette-heading">Bas prix. <span class="text-muted">It'll blow your mind.</span></h2>
         <p class="lead">Nous allons offrir les meilleurs prix sur le marché.</p>
       </div>
-      <div class="col-xs-4">
-        <%= image_tag "bas_prix_icon.png", class:"img-fluid img-responsive center-block" %>
+      <div class="col-xs-4 padding-pastille">
+        <%= image_tag "bas_prix_icon.png", class:"img-fluid img-responsive center-block " %>
       </div>
     </div>
   </div>
@@ -60,7 +58,7 @@
         <p class="lead">Peu importe ce que vous recherchez, on va l'avoir.</p>
       </div>
 
-      <div class="col-xs-4 col-xs-pull-8">
+      <div class="col-xs-4 col-xs-pull-8 padding-pastille">
        <%= image_tag "Tout_même_toit_bleu.png", class:"img-fluid img-responsive center-block" %>
      </div>
    </div>
@@ -74,7 +72,7 @@
       <p class="lead">Vous allez pouvoir bénéficiez d'un rabais si vous achetez l'un de nos deux kit : Rookie ou Pro.</p>
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-xs-4 padding-pastille">
       <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
       <%= image_tag "Achat_en_kit.png", class:"img-fluid img-responsive center-block" %>
     </div>
