--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -14,6 +14,15 @@ header {
     color: #fff;
 }
 
+#user_email{
+  background: none;
+  border: none;
+  border-bottom: solid 1px #8A8888;
+  font-size: 20px;
+  font-family: "Open Sans";
+  width: 200px;
+  text-align: center;
+}
 // @media (min-width: 768px){
 //   header {
 //       min-height: 100%;
