--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -15,28 +15,6 @@ header {
 }
 
 
-
-
-
-// @media (min-width: 768px){
-//   header {
-//       min-height: 100%;
-//   }
-// }
-
-// @media (min-width: 992px){
-//   header {
-//       min-height: 100%;
-//   }
-// }
-
-// @media (min-width: 1200px){
-//   header {
-//       min-height: 100%;
-//   }
-// }
-
-
 .navbar-brand {
    padding: 4px 16px;
  }
@@ -130,20 +108,12 @@ header .header-content {
   }
 }
 
-// .user_form_home{
-//   display: flex;
-//   // justify-content: space-around;
-// }
-
 // <--************************ Form pour le email *************************-->
 
 .subscribe {
   margin-top : 30px;
 }
 
-// #new_user{
-//   margin-bottom: 0px;
-// }
 .animated {
     visibility: visible;
     animation-name: fadeInUp;
@@ -194,64 +164,22 @@ header .header-content {
   }
 }
 
-// <--*******************************************************-->
+.btn-landing {
+  color: #4AB0E8;
+  background: #fff;
+}
 
-// #user_email{
-//   background: none;
-//   border: none;
-//   border-bottom: solid 1px #8A8888;
-//   width: 100%;
-//   font-size: 20px;
-//   font-family: "Open Sans";
-//   text-align: left;
-//   color: white;
-// }
+.btn-landing:hover {
+  color: #fff;
+  background: #323332;
+  border-color: #323332;
 
-// @media (min-width: 992px) {
-//     .form-inline {
-//       width: 100%;
-//   }
-// }
+}
 
-// @media (max-width: 992px) {
-//   .subscribe .btn {
-//       width: 100%;
-//   }
+// <-- ***************** end form_for pour email **************************-->
 
 
-  // #user_email{
-  //   width: 100%;
-  // }
 
-// @media (min-width: 768px) {
-// .form-group {
-//     display: inline-block;
-//     margin-bottom: 0;
-//     vertical-align: middle;
-// }
-// }
-// @media (min-width: 768px){
-//   #user_email{
-//     // display: block;
-//     font-size: 18px;
-//     margin-bottom: 10px;
-//     width: 187px;
-//     text-align: left;
-//   }
-// }
-// @media (min-width: 992px){
-//   #user_email{
-//     margin-bottom: 0px;
-
-//   }
-
-// }
-// @media (min-width: 1200px){
-//   #user_email{
-//     margin-bottom: 0px;
-//   }
-
-// }
 
 
 // **************************************************************
