--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -13,7 +13,7 @@
 
 .social-media-footer-box {
 
-  padding-left: 50px;
+  // padding-left: 50px; *** pas pour la landing page ***
   ul {
     margin: 0;
     font-size: 30px;
