Add paragraph for email incentive

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,6 +51,8 @@
 
             <p class="lead">Une boutique en ligne pour l'équipement d'arbitre de hockey.</p>
 
+            <p>Inscrivez-vous et courez la chance de gagner une <strong>nouvelle visière CCM straight!</strong></p>
+
             <div class="subscribe animated">
               <div class="row">
                 <div class="col-md-12">
