Change bottom footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -32,6 +32,11 @@
       </ul>
     </div>
 
+    <div class="container-easy">
+      <p><span>&copy; Copyright 2017 - Zebrasclub.com, Inc</span></p>
+    </div>
+
+
   </div> <!-- container-easy -->
 </footer> <!-- end of footer -->
 
