--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -32,8 +32,8 @@
       </ul>
     </div>
 
-    <div class="container-easy">
-      <p><span>&copy; Copyright 2017 - Zebrasclub.com, Inc</span></p>
+    <div class="padding-copyright container-easy">
+      <span>&copy; Copyright 2017 - Zebrasclub.com, Inc</span>
     </div>
 
 
