Changes content header

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,8 +46,8 @@
       <div class="col-xs-12 col-sm-6">
         <div class="header-content">
           <div class="header-content-inner">
-            <h1>On veut vous faciliter la vie!</h1>
-            <p class="lead">Une boutique en ligne pour l'équipement d'arbitre de hockey.</p>
+            <h1>On peut vous faciliter la vie!</h1>
+            <p class="lead">Boutique en ligne pour équipement d'arbitre de hockey.</p>
             <div class="subscribe animated" >
               <div class="row">
                 <div class="col-md-12">
