--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -19,7 +19,7 @@
       <div class="col-sm-6">
         <div class="header-content">
           <div class="header-content-inner">
-            <h1>On veut vous faciliter la vie!</h1>
+            <h1>On peut vous faciliter la vie!</h1>
             <p class="lead">Une boutique en ligne pour l'équipement d'arbitre de hockey.</p>
             <p><a class="btn btn-lg btn-success" href="#" role="button">Dit-moi quand ça sort</a></p>
           </div>
