--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,6 +48,7 @@
           <div class="header-content-inner">
             <h1>On peut vous faciliter la vie!</h1>
             <p class="lead">Boutique en ligne pour équipement d'arbitre de hockey.</p>
+            <p><span>Inscrivez-vous et courez la chance de gagner une <strong>nouvelle visière CCM straight !</strong></span></p>
             <div class="subscribe animated" >
               <div class="row">
                 <div class="col-md-12">
